@@ -1,0 +1,11 @@
+[run]
+source = zc.sourcefactory
+
+[report]
+precision = 2
+exclude_lines =
+    pragma: no cover
+    if __name__ == '__main__':
+    raise NotImplementedError
+    self.fail
+    raise AssertionError
