@@ -56,7 +56,7 @@ If an object has no parent, we fail:
   >>> zc.sourcefactory.browser.token.fromPersistent(p2)
   Traceback (most recent call last):
   ...
-  ValueError: Can not determine OID for <PersistentDummy object at 0x...>
+  ValueError: Can not determine OID for <builtins.PersistentDummy object at 0x...>
 
 Security proxied objects are unwrapped to get to their oid or connection
 attribute:
@@ -69,7 +69,7 @@ attribute:
   >>> p3p._p_jar
   Traceback (most recent call last):
     ...
-  ForbiddenAttribute: ('_p_jar', <PersistentDummy object at 0x...>)
+  ForbiddenAttribute: ('_p_jar', <builtins.PersistentDummy object at 0x...>)
 
   >>> zc.sourcefactory.browser.token.fromPersistent(p3p)
   u'0x02'
