@@ -1,9 +1,19 @@
 [tox]
 envlist =
-    py27,py33,py34,py35
+    py27,py35,py36,py37,coverage
 
 [testenv]
 commands =
-    python setup.py test -q
+    zope-testrunner --test-path=src []
+extras = test
+
+
+[testenv:coverage]
+usedevelop = true
+basepython =
+    python3.7
+commands =
+    coverage run -m zope.testrunner --test-path=src []
+    coverage report --fail-under=89
 deps =
-    .[test]
+    coverage
