@@ -5,7 +5,9 @@ Changes
 1.1.0 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Add support for Python 3.6 and 3.7.
+
+- Drop support for Python 3.3 and 3.4.
 
 
 1.0.0 (2016-08-02)
